--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "numbers-gallery",
+    "name": "5letters",
     "private": true,
-    "version": "0.0.0",
-    "type": "module",
+    "version": "2.0.0",
+    "type": "commonjs",
     "scripts": {
         "dev": "vite",
         "build": "vite build",
@@ -12,14 +12,33 @@
     },
     "dependencies": {
         "@iconify/json": "^2.1.132",
+        "@vueuse/core": "^10.9.0",
+        "pinia": "^2.0.23",
         "sass": "^1.55.0",
         "unplugin-icons": "^0.14.13",
-        "vue": "^3.2.41",
-        "vue-final-modal": "^3.4.4",
-        "vuex": "^4.1.0"
+        "vue": "^3.4.27",
+        "vue-final-modal": "^3.4.4"
     },
     "devDependencies": {
+        "@rushstack/eslint-patch": "^1.7.2",
+        "@types/node": "^20.11.24",
+        "@typescript-eslint/eslint-plugin": "^7.3.1",
+        "@typescript-eslint/parser": "^7.3.1",
         "@vitejs/plugin-vue": "^3.2.0",
+        "@vue/eslint-config-typescript": "^13.0.0",
+        "eslint": "^8.57.0",
+        "eslint-plugin-jsonc": "^2.14.1",
+        "eslint-plugin-vue": "^9.23.0",
+        "postcss-html": "^1.6.0",
+        "stylelint": "15.10.1",
+        "stylelint-config-recommended": "13.0.0",
+        "stylelint-config-recommended-scss": "13.0.0",
+        "stylelint-config-recommended-vue": "^1.5.0",
+        "stylelint-config-standard": "34.0.0",
+        "stylelint-order": "^6.0.4",
+        "stylelint-scss": "^5.3.2",
+        "stylelint-stylistic": "^0.4.5",
+        "typescript": "^4.6.4",
         "vite": "^3.2.0"
     }
 }
