--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
         "module": "esnext",
         "moduleResolution": "node",
         "strict": true,
-        "allowSyntheticDefaultImports": true
+        "allowSyntheticDefaultImports": true,
+        "resolveJsonModule": true
     },
     "include": [
         "./**/*",
